--- a/index.html
+++ b/index.html
@@ -82,22 +82,22 @@
       </audio>
 
       <!-- Win-Music -->
-      <audio id="win-music" loop>
+      <audio id="win-music">
         <source src="./win.mp3" type="audio/mpeg" />
       </audio>
 
       <!-- lose-Music -->
-      <audio id="lose-music" loop>
+      <audio id="lose-music">
         <source src="./you-lose-game-sound.mp3" type="audio/mpeg" />
       </audio>
 
       <!-- correct-Music -->
-      <audio id="correct-music" loop>
+      <audio id="correct-music" >
         <source src="./correct.mp3" type="audio/mpeg" />
       </audio>
 
       <!-- Incorrect-Music -->
-      <audio id="incorrect-music" loop>
+      <audio id="incorrect-music" >
         <source src="./wrong-answer.mp3" type="audio/mpeg" />
       </audio>
     </div>
